ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-staging
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - test.kataldi.com
    secretName: test-staging-letsencrypt
  rules:
  - host: test.kataldi.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
